fixed overflow on navigation on wider monitors.

--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -10,6 +10,7 @@ nav {
   position: fixed;
   z-index: 998;
   width: 100%;
+  max-width: 1920px;
 }
 .logo-and-links {
   flex-basis: 50%;
